expanded menu item with description sections to better customize what the lore should look like